// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Step Verification Script Delegate Click back button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.27274 1.40268C7.27274 1.29401 7.20007 1.22201 7.09141 1.22201H3.45337C3.3447 1.22201 3.27203 1.29401 3.27203 1.40268V1.58334C3.27203 1.78201 3.1087 1.94468 2.9087 1.94468C2.70869 1.94468 2.54536 1.78201 2.54536 1.58334V1.22201C2.54536 0.825337 2.8727 0.5 3.2727 0.5H7.27274C7.67341 0.5 8.00008 0.82467 8.00075 1.22134V6.6414C8.00075 7.03873 7.67408 7.3634 7.27341 7.3634H6.18206C5.98273 7.3634 5.81806 7.2014 5.81806 7.00207C5.81806 6.8034 5.98273 6.6414 6.18206 6.6414H7.09141C7.20007 6.6414 7.27274 6.56873 7.27274 6.46073V1.40268ZM0 7.84741V2.95803C0 2.59936 0.33667 2.30602 0.748008 2.30602H4.86205C5.27339 2.30602 5.61072 2.59936 5.61072 2.95803V7.84741C5.61072 8.20675 5.27339 8.50008 4.86205 8.50008H0.748008C0.33667 8.50008 0 8.20675 0 7.84741Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2l-4.2 4.2-1.6-1.5c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      disabled=""
      id="stepReviewScriptBackButton"
      tabindex="-1"
      type="button"
    >
      <div
        class="bp3-spinner bp3-button-spinner"
      >
        <div
          class="bp3-spinner-animation"
        >
          <svg
            height="20"
            stroke-width="16.00"
            viewBox="-3.00 -3.00 106.00 106.00"
            width="20"
          >
            <path
              class="bp3-spinner-track"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            />
            <path
              class="bp3-spinner-head"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              pathLength="280"
              stroke-dasharray="280 280"
              stroke-dashoffset="210"
            />
          </svg>
        </div>
      </div>
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate Click back button 2`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.27274 1.40268C7.27274 1.29401 7.20007 1.22201 7.09141 1.22201H3.45337C3.3447 1.22201 3.27203 1.29401 3.27203 1.40268V1.58334C3.27203 1.78201 3.1087 1.94468 2.9087 1.94468C2.70869 1.94468 2.54536 1.78201 2.54536 1.58334V1.22201C2.54536 0.825337 2.8727 0.5 3.2727 0.5H7.27274C7.67341 0.5 8.00008 0.82467 8.00075 1.22134V6.6414C8.00075 7.03873 7.67408 7.3634 7.27341 7.3634H6.18206C5.98273 7.3634 5.81806 7.2014 5.81806 7.00207C5.81806 6.8034 5.98273 6.6414 6.18206 6.6414H7.09141C7.20007 6.6414 7.27274 6.56873 7.27274 6.46073V1.40268ZM0 7.84741V2.95803C0 2.59936 0.33667 2.30602 0.748008 2.30602H4.86205C5.27339 2.30602 5.61072 2.59936 5.61072 2.95803V7.84741C5.61072 8.20675 5.27339 8.50008 4.86205 8.50008H0.748008C0.33667 8.50008 0 8.20675 0 7.84741Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2l-4.2 4.2-1.6-1.5c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate render data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.27274 1.40268C7.27274 1.29401 7.20007 1.22201 7.09141 1.22201H3.45337C3.3447 1.22201 3.27203 1.29401 3.27203 1.40268V1.58334C3.27203 1.78201 3.1087 1.94468 2.9087 1.94468C2.70869 1.94468 2.54536 1.78201 2.54536 1.58334V1.22201C2.54536 0.825337 2.8727 0.5 3.2727 0.5H7.27274C7.67341 0.5 8.00008 0.82467 8.00075 1.22134V6.6414C8.00075 7.03873 7.67408 7.3634 7.27341 7.3634H6.18206C5.98273 7.3634 5.81806 7.2014 5.81806 7.00207C5.81806 6.8034 5.98273 6.6414 6.18206 6.6414H7.09141C7.20007 6.6414 7.27274 6.56873 7.27274 6.46073V1.40268ZM0 7.84741V2.95803C0 2.59936 0.33667 2.30602 0.748008 2.30602H4.86205C5.27339 2.30602 5.61072 2.59936 5.61072 2.95803V7.84741C5.61072 8.20675 5.27339 8.50008 4.86205 8.50008H0.748008C0.33667 8.50008 0 8.20675 0 7.84741Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2l-4.2 4.2-1.6-1.5c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;
